--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,6 +1,7 @@
 {
-    "rewrites": [
-      {"source": "/:a*", "destination": "/"}
-    ]
-  }
-  
+    "routes": [{
+        "src": "/[^.]+",
+        "dest": "/",
+        "status": 200
+    }]
+}
